--- a/index.html
+++ b/index.html
@@ -1,44 +1,126 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Quick Equity Research Tool</title>
-  <link href="https://cdn.tailwindcss.com" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f6f9fc;
+      margin: 0;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    input {
+      padding: 0.5rem;
+      font-size: 1rem;
+      width: 200px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-bottom: 1rem;
+    }
+    button {
+      padding: 0.6rem 1.2rem;
+      background-color: #111827;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    button:hover {
+      background-color: #2563eb;
+    }
+    .card {
+      margin-top: 2rem;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+      padding: 2rem;
+      width: 100%;
+      max-width: 600px;
+      animation: fadeIn 0.6s ease-in-out;
+    }
+    .card img {
+      height: 50px;
+      margin-bottom: 1rem;
+    }
+    .card h2 {
+      margin: 0.25rem 0;
+    }
+    .card .data {
+      margin-top: 1rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+    .data-item {
+      background: #f1f5f9;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
-<body class="bg-gray-900 text-white min-h-screen flex flex-col items-center justify-center">
-  <h1 class="text-4xl font-bold mb-6">Quick Equity Research Tool</h1>
-  <div class="flex flex-col items-center space-y-4">
-    <input id="tickerInput" type="text" placeholder="Enter Ticker Symbol" 
-           class="px-4 py-2 rounded text-black w-80" />
-    <button id="generateBtn" 
-            class="bg-blue-600 hover:bg-blue-700 px-6 py-2 rounded text-white font-semibold">
-      Generate Report
-    </button>
-  </div>
+<body>
 
-  <div id="reportOutput" class="mt-10 w-4/5 max-w-3xl text-left whitespace-pre-wrap bg-gray-800 p-6 rounded-lg"></div>
+  <h1>Quick Equity Research Tool</h1>
+  <input type="text" id="ticker" placeholder="Enter ticker (e.g., AAPL)" />
+  <button onclick="fetchStock()">Generate Report</button>
+
+  <div id="report"></div>
 
   <script>
-    async function fetchStockData(ticker) {
-      try {
-        const response = await fetch(`/.netlify/functions/stock?ticker=${ticker}`);
-        const data = await response.json();
+    async function fetchStock() {
+      const ticker = document.getElementById('ticker').value.toUpperCase();
+      const res = await fetch(`/.netlify/functions/stock?ticker=${ticker}`);
+      const data = await res.json();
 
-        const output = document.getElementById('reportOutput');
-        output.textContent = JSON.stringify(data, null, 2);
-      } catch (error) {
-        document.getElementById('reportOutput').textContent = "Error fetching data.";
-        console.error(error);
+      const container = document.getElementById('report');
+      container.innerHTML = '';
+
+      if (data.error) {
+        container.innerHTML = `<p style="color:red;">❌ ${data.error}</p>`;
+        return;
       }
+
+      const diff = data.price - data.dcf;
+      const diffPct = ((diff / data.dcf) * 100).toFixed(2);
+      const color = diff > 0 ? 'green' : 'red';
+
+      container.innerHTML = `
+        <div class="card">
+          <img src="${data.image}" alt="${data.companyName}" />
+          <h2>${data.companyName} (${data.symbol})</h2>
+          <p><strong>Sector:</strong> ${data.sector} | <strong>Industry:</strong> ${data.industry}</p>
+          <p><strong>CEO:</strong> ${data.ceo}</p>
+          <p><strong>Website:</strong> <a href="${data.website}" target="_blank">${data.website}</a></p>
+          <div class="data">
+            <div class="data-item">Price: $${data.price}</div>
+            <div class="data-item">DCF: $${data.dcf.toFixed(2)}</div>
+            <div class="data-item" style="color:${color};">∆: ${diff > 0 ? '+' : ''}${diff.toFixed(2)} (${diffPct}%)</div>
+            <div class="data-item">Market Cap: $${(data.mktCap/1e12).toFixed(2)}T</div>
+            <div class="data-item">Beta: ${data.beta}</div>
+            <div class="data-item">Employees: ${data.fullTimeEmployees}</div>
+          </div>
+          <p style="margin-top: 1rem;">${data.description.split('. ').slice(0, 2).join('. ')}.</p>
+        </div>
+      `;
     }
-
-    document.getElementById('generateBtn').addEventListener('click', () => {
-      const ticker = document.getElementById('tickerInput').value.trim().toUpperCase();
-      if (ticker) {
-        fetchStockData(ticker);
-      }
-    });
   </script>
+
 </body>
 </html>
