--- a/index.html
+++ b/index.html
@@ -4,123 +4,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quick Equity Research Tool</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f6f9fc;
-      margin: 0;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-    input {
-      padding: 0.5rem;
-      font-size: 1rem;
-      width: 200px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      margin-bottom: 1rem;
-    }
-    button {
-      padding: 0.6rem 1.2rem;
-      background-color: #111827;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-    button:hover {
-      background-color: #2563eb;
-    }
-    .card {
-      margin-top: 2rem;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
-      padding: 2rem;
-      width: 100%;
-      max-width: 600px;
-      animation: fadeIn 0.6s ease-in-out;
-    }
-    .card img {
-      height: 50px;
-      margin-bottom: 1rem;
-    }
-    .card h2 {
-      margin: 0.25rem 0;
-    }
-    .card .data {
-      margin-top: 1rem;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-    .data-item {
-      background: #f1f5f9;
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+  <title>Equity Research Report</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-50 text-gray-800 font-sans p-6">
+  <div class="max-w-4xl mx-auto space-y-10">
+    
+    <h1 class="text-3xl font-bold text-center mb-2">Equity Research Report</h1>
+    <div class="flex justify-center items-center gap-2 mb-6">
+      <input id="tickerInput" type="text" placeholder="Enter Ticker (e.g. AAPL)" class="border px-4 py-2 rounded shadow text-sm w-60" />
+      <button onclick="handleFetch()" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">Generate Report</button>
+    </div>
+    <h2 class="text-xl font-semibold text-center mb-6" id="companyName">[Awaiting Ticker]</h2>
+    
 
-  <h1>Quick Equity Research Tool</h1>
-  <input type="text" id="ticker" placeholder="Enter ticker (e.g., AAPL)" />
-  <button onclick="fetchStock()">Generate Report</button>
+    <section>
+      <h2 class="text-xl font-semibold border-b pb-1 mb-2">1. Executive Summary</h2>
+      <p id="execSummary" class="text-sm text-gray-700">Loading...</p>
+    </section>
 
-  <div id="report"></div>
+    <section>
+      <h2 class="text-xl font-semibold border-b pb-1 mb-2">2. Company Overview</h2>
+      <p id="companyOverview" class="text-sm text-gray-700">Loading...</p>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold border-b pb-1 mb-2">3. Industry Overview</h2>
+      <p id="industryOverview" class="text-sm text-gray-700">Loading...</p>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold border-b pb-1 mb-2">4. Financial Analysis</h2>
+      <p id="financials" class="text-sm text-gray-700">Loading...</p>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold border-b pb-1 mb-2">5. Financial Projections and Valuation</h2>
+      <p id="valuation" class="text-sm text-gray-700">Loading...</p>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold border-b pb-1 mb-2">6. Investment Recommendation</h2>
+      <p id="recommendation" class="text-sm text-gray-700">Loading...</p>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold border-b pb-1 mb-2">7. Risks</h2>
+      <p id="risks" class="text-sm text-gray-700">Loading...</p>
+    </section>
+
+    <section>
+      <h2 class="text-xl font-semibold border-b pb-1 mb-2">8. Target Price</h2>
+      <p id="targetPrice" class="text-sm text-gray-700">Loading...</p>
+    </section>
+  </div>
 
   <script>
-    async function fetchStock() {
-      const ticker = document.getElementById('ticker').value.toUpperCase();
+    async function fetchReport(ticker) {
       const res = await fetch(`/.netlify/functions/stock?ticker=${ticker}`);
       const data = await res.json();
 
-      const container = document.getElementById('report');
-      container.innerHTML = '';
-
-      if (data.error) {
-        container.innerHTML = `<p style="color:red;">❌ ${data.error}</p>`;
+      if (!data.symbol || data.error) {
+        document.getElementById("companyName").textContent = "Invalid Ticker";
+        document.querySelectorAll("p").forEach(p => p.textContent = "Unable to load data.");
         return;
       }
 
-      const diff = data.price - data.dcf;
-      const diffPct = ((diff / data.dcf) * 100).toFixed(2);
-      const color = diff > 0 ? 'green' : 'red';
+      document.getElementById("companyName").textContent = `${data.companyName} (${data.symbol})`;
 
-      container.innerHTML = `
-        <div class="card">
-          <img src="${data.image}" alt="${data.companyName}" />
-          <h2>${data.companyName} (${data.symbol})</h2>
-          <p><strong>Sector:</strong> ${data.sector} | <strong>Industry:</strong> ${data.industry}</p>
-          <p><strong>CEO:</strong> ${data.ceo}</p>
-          <p><strong>Website:</strong> <a href="${data.website}" target="_blank">${data.website}</a></p>
-          <div class="data">
-            <div class="data-item">Price: $${data.price}</div>
-            <div class="data-item">DCF: $${data.dcf.toFixed(2)}</div>
-            <div class="data-item" style="color:${color};">∆: ${diff > 0 ? '+' : ''}${diff.toFixed(2)} (${diffPct}%)</div>
-            <div class="data-item">Market Cap: $${(data.mktCap/1e12).toFixed(2)}T</div>
-            <div class="data-item">Beta: ${data.beta}</div>
-            <div class="data-item">Employees: ${data.fullTimeEmployees}</div>
-          </div>
-          <p style="margin-top: 1rem;">${data.description.split('. ').slice(0, 2).join('. ')}.</p>
-        </div>
-      `;
+      document.getElementById("execSummary").textContent =
+        `${data.companyName} is a ${data.industry} firm in the ${data.sector} sector. Currently trading at $${data.price}, with a DCF valuation of $${data.dcf.toFixed(2)}, we analyze its investment potential.`;
+
+      document.getElementById("companyOverview").textContent =
+        data.description.split('. ').slice(0, 3).join('. ') + ".";
+
+      document.getElementById("industryOverview").textContent =
+        `The ${data.industry} industry remains a key segment within the ${data.sector} sector, shaped by innovation, competitive dynamics, and macroeconomic trends.`;
+
+      document.getElementById("financials").textContent =
+        `Market Cap: $${(data.mktCap / 1e12).toFixed(2)}T, Avg Volume: ${data.volAvg.toLocaleString()}, Dividend: $${data.lastDiv}, Beta: ${data.beta}, 52W Range: ${data.range}`;
+
+      const overValued = data.price > data.dcf;
+      const diff = (data.price - data.dcf).toFixed(2);
+      const pct = ((diff / data.dcf) * 100).toFixed(1);
+      document.getElementById("valuation").textContent =
+        `Based on DCF valuation, the stock appears ${overValued ? "overvalued" : "undervalued"} by approximately ${Math.abs(pct)}%.`;
+
+      document.getElementById("recommendation").textContent =
+        `We ${overValued ? "recommend caution at current levels" : "believe this is a buying opportunity"} based on valuation and market positioning.`;
+
+      document.getElementById("risks").textContent =
+        `Key risks include market volatility, sector-specific pressures, and macroeconomic headwinds.`;
+
+      document.getElementById("targetPrice").textContent =
+        `DCF-derived target price: $${data.dcf.toFixed(2)}. Current: $${data.price}`;
     }
-  </script>
 
+    function handleFetch() {
+  const ticker = document.getElementById('tickerInput').value.toUpperCase();
+  if (ticker) fetchReport(ticker);
+}
+
+// Optional default
+    fetchReport("AAPL");
+  </script>
 </body>
 </html>
